<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robo Transmitter</string>
    <string name="hello_world">Welcome To Control Window!</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Bluetooth Status: -</string>
    <string name="on">BT On</string>
    <string name="off">BT Off</string>
    <string name="List">List paired Devices</string>
    <string name="close">Close Application</string>
    <string name="exit">Close App</string>
    <string name="stop">Stop Robot</string>
    <string name="Find">Search new Devices / Cancel</string>

</resources>