<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity"
   android:background="#ADAD85" >

  <TextView
       android:id="@+id/text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="#A30000"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:text="@string/Text" />
     
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="30dp"
      android:layout_marginBottom="30dp" >

   <Button
      android:id="@+id/turnOn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/on" 
      android:soundEffectsEnabled="true"
      android:background="#336600"
      android:layout_marginLeft="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginTop="4dp" 
      android:layout_marginBottom="4dp" />

   <Button
      android:id="@+id/turnOff"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/off"
      android:soundEffectsEnabled="true"
      android:background="#336600"
      android:layout_marginLeft="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginTop="4dp" 
      android:layout_marginBottom="4dp" />

   </LinearLayout>
   
   
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="85dp" 
      android:layout_marginBottom="80dp" >
   
	   <Button
	      android:id="@+id/paired"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/List"
	      android:soundEffectsEnabled="true"
         android:background="#336600"
         android:padding="5dp"
      android:layout_marginLeft="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginTop="4dp" 
      android:layout_marginBottom="4dp" />
	     
	   <Button
	      android:id="@+id/search"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/Find" 
	      android:soundEffectsEnabled="true"
          android:background="#336600"
          android:padding="5dp"
      android:layout_marginLeft="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginTop="4dp" 
      android:layout_marginBottom="4dp" />

	   <ListView
	       android:id="@+id/listView1"
	       android:layout_width="fill_parent"
	       android:layout_height="200dp"
	       android:layout_marginTop="20dp"
	       android:background="#9C9C79" >
	
	   </ListView>
	   
	   

   </LinearLayout>
   
   
   	<LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="425dp" >

   <Button
      android:id="@+id/exit_app"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:soundEffectsEnabled="true"
       android:background="#003300"
      android:padding="12dp"
      android:layout_marginLeft="100dp"
      android:text="@string/close" />

   </LinearLayout>

   

</RelativeLayout>